# multiagent-rs

./: Cargo.toml  README.md
examples/: action.rs
src/: action.rs  lib.rs  llm.rs  role.rs
