[package]
name = "multiagent-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erniebot-rs = "0.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1.80"
regex = "1"
lazy_static = "1"
serde = "1.0.202"
serde_json = "1.0.117"